<resources>
    <string name="app_name">Jourknow</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="addSign">\u3009</string>
    <string name="journal">Journal</string>

    <string name="app_id">579c4bfb</string>
    <string name="pleaseSpeak">Please speak</string>
    <string name="errorCode">Internal error. Code: </string>
    <string name="reports">Reports</string>
    <string-array name="emotions">
        <item>Joy</item>
        <item>Anger</item>
        <item>Sadness</item>
        <item>Disgust</item>
        <item>Fear</item>
    </string-array>
    <!-- hex:"#FFD629", "#FFF173",//joy
            "#E80521", "#FFA197",//anger
            "#086DB2", "#69C3E2",//sadness
            "#592684", "#A779D8", //disgust
            "#325E2B", "#7DB258"//fear
             <array name="jasdfColors">
        <item>16766505</item>
        <item>16773491</item>
        <item>15205665</item>
        <item>16753047</item>
        <item>552370</item>
        <item>6931426</item>
        <item>5842564</item>
        <item>10975704</item>
        <item>3300907</item>
        <item>8237656</item>-->
    <string-array name="jasdfColors">
        <item>#FFD629</item>
        <item>#FFF173</item>
        <item>#E80521</item>
        <item>#FFA197</item>
        <item>#086DB2</item>
        <item>#69C3E2</item>
        <item>#592684</item>
        <item>#A779D8</item>
        <item>#325E2B</item>
        <item>#7DB258</item>
    </string-array>
    <string name="topQuotes">Quotes</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="emotionBalls">Emotion Balls</string>
    <string name="myAverage">My Average</string>
    <string name="trend">Trend</string>
    <string name="quoteCounts">Quote Counts</string>
    <string name="emotionNumberDescription">(>0.5: moderate, >0.75: strong)</string>
    <string name="influenceFactors">Influence Factors</string>
    <string name="influenceDesc">Time of the day:\n Day of the week:\n Date of the month:\n Location:\n Weather:\n </string>
    <string name="comments">Comments</string>
    <string name="emotionalQuotes">Emotional Quotes</string>
    <string name="emotionBank">Emotion Bank</string>
    <string name="reflection">Reflection</string>
    <string name="notConnected">Device is not connected to internet. Please connect to internet and try again.</string>
    <string name="feedback">Feedback</string>
    <string name="recommendation_subject">Jourknow, my emotion assistant.</string>
    <string name="recommendation_body">Voice journal to know myself. Analyze, track, improve my emotions. Get app at www.Jourknow.com. Follow www.twitter.com/myJourknow</string>
    <string name="shareWith">Share with...</string>
    <string name="followUs">Follow Us</string>
    <string name="rateUs">Rate Us</string>

</resources>
