<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/trend" />
        <item android:id="@+id/nav_quotes"
            android:title="@string/topQuotes"
            android:icon="@drawable/ic_format_quote_black_24dp"
        />
    </group>

    <item android:title="Like us? Help us!">
        <menu>
            <item
                android:id="@+id/nav_follow"
                android:icon="@drawable/twitter"
                android:title="@string/followUs" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_rate"
                android:title="@string/rateUs" />
        </menu>
    </item>

</menu>
