<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_report"
    android:title="@string/reports"
    android:orderInCategory="100"
    android:icon="@drawable/ic_timeline_white_24px"
    app:showAsAction="always" />
    <item android:id="@+id/action_quotes"
        android:title="@string/topQuotes"
        android:orderInCategory="200"
        android:icon="@drawable/ic_format_quote_white_24px"
        app:showAsAction="always" />
    <item android:id="@+id/action_share"
        android:title="Share"
        android:orderInCategory="250"
        android:icon="@drawable/ic_share_white_24px"
        app:showAsAction="always" />

    <item android:id="@+id/action_feedback"
        android:title="@string/feedback"
        android:orderInCategory="300"
        android:icon="@drawable/ic_send_white_24px"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_follow"
        android:title="@string/followUs"
        android:orderInCategory="360"
        android:icon="@drawable/twitter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="500"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
