<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NoteActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <EditText
                android:id="@+id/iat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:paddingBottom="20dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:id="@+id/linearLayout">

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginEnd="50dp"
                    android:src="@mipmap/ic_mic_round"
                    android:id="@+id/speak"
                    android:background="@null"
                    />
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@mipmap/ic_round"
                    android:id="@+id/analyze"
                    android:background="@null"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotionBalls"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="20dp" />

            <com.github.mikephil.charting.charts.BubbleChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotionalQuotes"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/coloredText"
                android:bufferType="spannable"
                android:textIsSelectable="true"
                android:layout_gravity="bottom"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:id="@+id/comments"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:id="@+id/tvComments"
                android:paddingTop="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reflection"
                android:id="@+id/reflection"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="20dp" />
            <EditText
                android:id="@+id/textReflection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:paddingBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

